2010-03-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Patch contributed by Mareike Piechowiak <noplant@gmx.de>:

	* nasl/CMakeLists.txt: Get version dynamically from file VERSION.

2010-03-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Patch contributed by Mareike Piechowiak <noplant@gmx.de>:

	* base/CMakeLists.txt, omp/CMakeLists.txt: Fix handling
	of dynamic VERSION handling.

2010-03-16  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Improved remote authentication (ldap), changed config file format.

	* misc/openvas_auth.c: Use ifdef instead of if != 0 .

	* misc/ldap_auth.h: Extended ldap_auth_info struct to cover upcoming
	possible admin/user distinction, replaced two entries for DN to
	authenticate against with a single entry.

	* misc/ldap_auth.c (auth_dn_is_good): New function to check auth_dn
	entry of keyfile.
	(ldap_auth_dn_new, ldap_info_create_dn): Reflect changes to the
	ldap_auth_info struct.
	(ldap_auth_query_role): New function stub to find out role of user.

	* doc/example.auth.conf: Updated.

2010-03-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Patch contributed by Mareike Piechowiak <noplant@gmx.de>:
	
	* omp/CMakeLists.txt: Get version dynamically from file VERSION.

2010-03-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Patch contributed by Mareike Piechowiak <noplant@gmx.de>:

	* base/CMakeLists.txt: Get version dynamically from file VERSION.

2010-03-12  Michael Wiegand <michael.wiegand@intevation.de>

	Added howto for compiling openvas-libraries with WMI support.

	* doc/wmi-howto.txt: New.

2010-03-09  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Add code to add support for remote (ldap) authentication with the
	openvas_auth module.
	Authentication methods are somewhat abstracted ("authenticators") and
	configurable via a file .auth.conf that is expected to be found in
	the openvas "users" directory. An exemplary .auth.conf file is found