@@ -36,6 +36,7 @@ doc/libopenvas-config.1
 doc/openvas-nasl.1
 doc/README.BPF
 doc/signatures-howto.txt
+hg/CMakeLists.txt
 hg/hg_add_hosts.c
 hg/hg_add_hosts.h
 hg/hg_debug.c
@@ -49,7 +50,6 @@ hg/hg_utils.c
 hg/hg_utils.h
 hg/hosts_gatherer.c
 hg/hosts_gatherer.h
-hg/Makefile
 hg/test.c
 include/config.h.in
 include/includes.h
