@@ -2,6 +2,18 @@
 
 	Patch contributed by Mareike Piechowiak <noplant@gmx.de>:
 
+	* hg/Makefile: Removed.
+
+	* hg/CMakeLists.txt: New.
+
+	* Makefile: Run cmake for library hg.
+
+	* MANIFEST: Updated.
+
+2010-03-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	Patch contributed by Mareike Piechowiak <noplant@gmx.de>:
+
 	* nasl/CMakeLists.txt: Get version dynamically from file VERSION.
 
 2010-03-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
